# dave

./: .gitignore  README.md  dave_sim_install.sh  dave_sim_install_22.sh  gz_packages_install.sh
bb_entrypoint/: CMakeLists.txt  README.md  package.xml
bb_entrypoint/launch/: asv5.launch.py  auv4.launch.py  auv4_asv5.launch.py  bb_robot.launch.py
examples/bb_entrypoint/: README.md  package.xml
examples/bb_entrypoint/launch/: bb_robot.launch.py
examples/control/: package.xml  setup.py
examples/control/control/: bb_odom_republisher.py  bb_odom_to_odom_ned_repub.py  bb_thrust_republisher.py  imu_sub.py  thrust_pub.py  thrust_republisher.py
examples/control/unit_tests/: move_front.py
gazebo/dave_gz_multibeam_sonar/multibeam_sonar/: CMakeLists.txt  MultibeamSonarSensor.cc
gazebo/dave_gz_multibeam_sonar/multibeam_sonar_system/: CMakeLists.txt
gazebo/dave_gz_world_plugins/: CMakeLists.txt
models/bb_robot_models/: CMakeLists.txt  package.xml
models/bb_robot_models/bb_robot_models/: flu_to_ned_odom_repub.py
models/bb_robot_models/bb_robot_models/auv4/: auv4_thrust_repub.py  grabber_action_server.py
models/bb_robot_models/config/: robot_config.py  ros_gz_bridge_config.yaml
models/bb_robot_models/config/asv5/: robot_config.py  ros_gz_bridge_config.yaml
models/bb_robot_models/config/auv4/: robot_config.py  ros_gz_bridge_config.yaml
models/bb_robot_models/description/auv4/: model.sdf
models/bb_robot_models/launch/: asv5_upload_robot.launch.py  auv4_upload_robot.launch.py  upload_robot.launch.py
models/bb_robot_models/republishers/: bb_odom_republisher.py  bb_thrust_republisher.py  dummy_action_server.py  grabber_action_server.py
models/bb_worlds/: CMakeLists.txt  package.xml
models/bb_worlds/models/dropper_marker/: model.config  model.sdf
models/bb_worlds/models/pool_waves/: model.config  model.sdf
models/bb_worlds/models/sauvc_blue_drum/: blue_drum.dae  model.config  model.sdf
models/bb_worlds/models/sauvc_blue_flare/: blue_flare.dae  model.config  model.sdf
models/bb_worlds/models/sauvc_gate/: model.config  model.sdf
models/bb_worlds/models/sauvc_gate copy/: gate.dae  model.config  model.sdf
models/bb_worlds/models/sauvc_green_buoy/: model.config  model.sdf
models/bb_worlds/models/sauvc_orange_flare/: model.config  model.sdf  (+1 more)
models/bb_worlds/worlds/: dave_ocean_waves.world  sauvc_2024.world
(+33 files in other folders)
