<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>bb_robot_models</name>
  <version>0.1.0</version>
  <description>Dave robot model description files are placed here.</description>
  <maintainer email="rakeshvivek97@gmail.com">Rakesh Vivekanandan</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <depend>auv4_description</depend>
  <depend>bb_auv_msgs</depend>
  <depend>bb_controls_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- This doesn't work yet https://github.com/gazebosim/ros_gz/pull/492 -->
    <!-- <gazebo_ros gazebo_model_path="${prefix}/meshes"/> -->
  </export>
</package>
